--- a/package.json
+++ b/package.json
@@ -63,7 +63,6 @@
     "@types/got": "^9.6.11",
     "@types/jest": "^27.5.1",
     "@types/node": "^16.0.0",
-    "@types/sharp": "^0.29.4",
     "@types/ws": "^8.0.0",
     "conventional-changelog-cli": "^2.2.2",
     "eslint": "^8.0.0",
@@ -74,7 +73,6 @@
     "open": "^8.4.2",
     "qrcode-terminal": "^0.12.0",
     "release-it": "^15.10.3",
-    "sharp": "^0.32.6",
     "ts-jest": "^27.0.3",
     "ts-node": "^10.8.1",
     "typedoc": "^0.24.7",
@@ -83,8 +81,7 @@
   "peerDependencies": {
     "jimp": "^0.16.1",
     "link-preview-js": "^3.0.0",
-    "qrcode-terminal": "^0.12.0",
-    "sharp": "^0.32.6"
+    "qrcode-terminal": "^0.12.0"
   },
   "peerDependenciesMeta": {
     "jimp": {
@@ -94,9 +91,6 @@
       "optional": true
     },
     "qrcode-terminal": {
-      "optional": true
-    },
-    "sharp": {
       "optional": true
     }
   },
